<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateprofile"
    android:background="#D1DDDF"
    >

    <EditText
    android:id="@+id/upname1"
    android:layout_width="310dp"
    android:layout_height="50sp"
    android:background="@drawable/input_f"
    android:ems="10"
    android:hint="Name"
    android:inputType="textPersonName"

    android:textColorHint="#000000"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.495"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.458" />

    <EditText
        android:id="@+id/upemail1"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:background="@drawable/input_f"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"

        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upname1"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/upPassword1"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:background="@drawable/input_f"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upaddress1"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/textView240"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="User Account"
        android:textColorHint="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/upname1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <ImageView
        android:id="@+id/back_button0"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView240"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        app:srcCompat="@drawable/back" />

    <Button
        android:id="@+id/upbuttonup1"
        android:layout_width="280dp"
        android:layout_height="55sp"
        android:background="@drawable/login_b"
        android:text="Save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upPassword1"
        />

    <EditText
        android:id="@+id/upaddress1"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/input_f"
        android:ems="10"
        android:hint="Address"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upemail1"
        app:layout_constraintVertical_bias="0.844" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="126dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toTopOf="@+id/upname1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView240"
        app:srcCompat="@drawable/pro" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_nocahange"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/upname1"
        app:layout_constraintEnd_toStartOf="@+id/imageView40"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/uptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/email_nocahnge"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/upemail1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upname1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/address_nochange"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/upaddress1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upemail1"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/passowr_nochange"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/upPassword1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upaddress1" />

</androidx.constraintlayout.widget.ConstraintLayout>